@@ -1,5 +1,10 @@
 2003-04-07  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* kb/consttab.h :
+	* kb/consttab.cpp :
+
+	  - Added get() functions.
+
 	* kb/kb.h :
 	* kb/kb.cpp :
 
